package br.edu.imepac.commons.entities;

public enum StatusAtendimento {
    EM_ANDAMENTO,
    REALIZADO
}
